opam-version: "2.0"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-webmachine"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-webmachine.git"
bug-reports: "https://github.com/inhabitedtype/ocaml-webmachine/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "webmachine"
  "async"
  "core"
  "cohttp-async"
  "lwt"
  "cohttp-lwt-unix"
  "ounit" {with-test & >= "1.0.2"}
  "dune" {>= "1.0"}
]
synopsis: "Webmachine examples"
